# c8

./: .gitignore  CMakeLists.txt  Makefile  README.md  fonts.hpp  main.cpp  opcodes.cpp  opcodes.hpp  ui.cpp  ui.hpp
c8vs/: c8vs.sln  c8vs.vcxproj  c8vs.vcxproj.filters
examples/: logo.c8  logo.hex
fonts/: data.txt
programs/: program.c8
src/: config.hpp  cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp  opcodes.cpp  quirks.hpp  ui.cpp  vga.cpp  vga.hpp
